# apps

./: .gitignore  README.md  project.yml
JooDock/: AppDelegate.swift  Info.plist
JooDock-MacOS/: README.md
JooDock-MacOS/JooDock/: AppDelegate.swift  JooDockApp.swift
JooDock-MacOS/JooDock/Models/: AppState.swift  CLAUDE.md
JooDock-MacOS/JooDock/Views/: PopupView.swift
JooDock-Windows/: .gitignore  README.md  index.html  package.json  vite.config.ts
JooDock-Windows/src/: App.tsx  index.css
JooDock-Windows/src-tauri/: Cargo.toml  tauri.conf.json
JooDock-Windows/src-tauri/src/: hotzone.rs  lib.rs  main.rs  storage.rs  tray.rs
JooDock-Windows/src-tauri/src/commands/: files.rs  groups.rs  mod.rs  search.rs  settings.rs  window.rs
JooDock-Windows/src/components/: AddGroupModal.tsx  FileList.tsx  FileRow.tsx  Footer.tsx  GroupSection.tsx  Header.tsx
JooDock-Windows/src/stores/: appStore.ts
JooDock-Windows/src/types/: index.ts
JooDock.xcodeproj/: project.pbxproj
JooDock/JooDock/: CLAUDE.md
JooDock/JooDock/Models/: FileItem.swift
JooDock/JooDock/Resources/Assets.xcassets/AccentColor.colorset/: CLAUDE.md
JooDock/JooDock/Views/: CLAUDE.md  HeaderView.swift
JooDock/Models/: AppState.swift  FileGroup.swift  FileItem.swift
JooDock/Resources/Assets.xcassets/AccentColor.colorset/: Contents.json
JooDock/Services/: FileStorage.swift  HoverMonitor.swift
JooDock/Views/: FileRowView.swift  FooterView.swift  GroupSection.swift  PopupView.swift  VisualEffectView.swift
